# deepin-im

./: .gitignore  CMakeLists.txt  README.md
dim/: CMakeLists.txt  Dim.cc  Dim.h  InputContext.cc  InputContext.h  org.deepin.dde.inputcontext.xml  org.deepin.dde.inputmethod.xml
imdemotest/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
kimpanel/: CMakeLists.txt  KIMPanel.h  Panel.cc  main.cc
misc/systemd/: CMakeLists.txt  org.deepin.dde.dim.service.in  org.deepin.dde.dimwl.service.in  org.deepin.dde.imwl.service.in
qtfrontend/: CMakeLists.txt  DIMPlatformInputContext.cc  DIMPlatformInputContext.h  DIMPlatformInputContextPlugin.cc  InputContextProxy.cc  InputContextProxy.h  WaylandConnection.cc  WaylandConnection.h
src/: CMakeLists.txt  main.cc  panel.qml
src/KIMPanel/: KIMPanel.cc  KIMPanel.h  KIMPanel2Adaptor.cc  KIMPanel2Adaptor.h  KIMPanelAdaptor.cc  KIMPanelAdaptor.h
src/addons/: CMakeLists.txt
src/addons/dbusfrontend/: CMakeLists.txt  DBusFrontend.cc  DBusFrontend.h  InputContext1.cc  InputContext1.h  InputContextBus.cc  InputContextBus.h  dbusfrontend.conf  inputcontext.xml  portal.xml
src/addons/fcitx5/: BatchEvent.h  CMakeLists.txt  Fcitx5Proxy.cpp  Fcitx5Proxy.h  InputMethodV2.cpp  InputMethodV2.h  Keyboard.cpp  Keyboard.h  Output.cpp  Output.h  Server.cpp  Server.h  View.cpp  fcitx5.conf  main.cpp
src/addons/fcitx5proxy/: BatchEvent.cc  BatchEvent.cpp  BatchEvent.h  CMakeLists.txt  DBusProvider.cc  DBusProvider.cpp  DBusProvider.h  Fcitx5Proxy.cc  Fcitx5Proxy.cpp  Fcitx5Proxy.h  fcitx5proxy.conf
src/addons/ibus/: CMakeLists.txt  IBusProxy.cpp  IBusProxy.h  ibus.conf
src/addons/ibusproxy/: CMakeLists.txt  IBusProxy.cc  IBusProxy.cpp  IBusProxy.h  ibusproxy.conf
src/addons/keyboard/: CMakeLists.txt  keyboard.cc  keyboard.cpp  keyboard.h
src/addons/trayicon/: CMakeLists.txt  IconProvider.cpp  IconProvider.h  TrayIcon.cpp  TrayIcon.h  TrayIcon.qml
src/addons/waylandserver/: CMakeLists.txt  WaylandServer.cpp  WaylandServer.h  WaylandServer_public.cpp  WaylandServer_public.h
src/addons/wlfrontend/: AppMonitor.cpp  AppMonitor.h  CMakeLists.txt  DimTextInputV1.cpp  DimTextInputV1.h  InputContext1.cc  InputContext1.h  InputMethodKeyboardGrabV2.cpp  InputMethodKeyboardGrabV2.h  InputMethodV2.cpp  InputMethodV2.h  InputPopupSurfaceV2.cpp  InputPopupSurfaceV2.h  TreelandForeignToplevelManagementV1.cpp  TreelandForeignToplevelManagementV1.h  VirtualInputContext.cpp  VirtualInputContext.h  VirtualInputContextGlue.cpp  VirtualInputContextGlue.h  VirtualInputContextManager.cpp  VirtualInputContextManager.h  WLFrontend.cc  WLFrontend.cpp  WLFrontend.h  WaylandConnection.cc  WaylandConnection.h  WaylandInputContext.cpp  WaylandInputContext.h  WaylandInputContextV1.cc  WaylandInputContextV1.h  WaylandInputContextV2.cc  WaylandInputContextV2.cpp  WaylandInputContextV2.h  WlInputContext.cpp  WlInputContext.h  WlType.h  WlrAppMonitor.cpp  WlrAppMonitor.h  X11AppMonitor.cpp  X11AppMonitor.h  (+5 more)
src/common/: common.h
src/dcc-im-plugin/: CMakeLists.txt  imconfigplugin.cpp  imconfigplugin.h  main.cpp
src/dcc-im-plugin/operation/: configoption.cpp  configoption.h  (+12 more)
src/dim/: CMakeLists.txt  main.cc  main.cpp
src/dimcore/: Addon.cc  Addon.cpp  Addon.h  CMakeLists.txt  Dconfig.cpp  Dim.cc  Dim.cpp  Dim.h  Events.cc  Events.cpp  Events.h  FrontendAddon.cc  FrontendAddon.cpp  FrontendAddon.h  InputContext.cc  InputContext.cpp  InputContext.h  InputMethodAddon.cc  InputMethodAddon.cpp  InputMethodAddon.h  InputMethodEntry.cc  InputMethodEntry.cpp  InputMethodEntry.h  InputState.cc  InputState.cpp  InputState.h  ObjectId.h  ProxyAddon.cc  ProxyAddon.cpp  ProxyAddon.h  config.h.in
src/dimwl/: CMakeLists.txt  InputMethodV2.cpp  InputMethodV2.h  Keyboard.cpp  Keyboard.h  Listener.h  Output.cpp  Output.h  Server.cpp  Server.h  TextInputV3.cpp  TextInputV3.h  View.cpp  View.h  XcbHelper.cpp  XcbHelper.h  main.cpp
src/gtk3immodule/: CMakeLists.txt  DimGtkTextInputV1.cpp  DimGtkTextInputV1.h  imcontext.cpp  imcontext.h  main.cpp
src/gtkimmodule/: CMakeLists.txt
src/imwl/: CMakeLists.txt  Compositor.cpp  Compositor.h  Core.h  DimTextInputManagerV1.cpp  DimTextInputManagerV1.h  DimTextInputV1.cpp  DimTextInputV1.h  InputMethodKeyboardGrabV2.cpp  InputMethodKeyboardGrabV2.h  InputMethodManagerV2.cpp  InputMethodManagerV2.h  InputMethodV2.cpp  InputMethodV2.h  InputPopupSurfaceV2.cpp  InputPopupSurfaceV2.h  Keyboard.cpp  Keyboard.h  Seat.cpp  Seat.h  Server.cpp  Server.h  Surface.cpp  Surface.h  TextInputManagerV3.cpp  TextInputManagerV3.h  TextInputV3.cpp  TextInputV3.h  VirtualKeyboardManagerV1.cpp  VirtualKeyboardManagerV1.h  VirtualKeyboardV1.cpp  VirtualKeyboardV1.h  X11ActiveWindowMonitor.cpp  X11ActiveWindowMonitor.h  X11KeyboardGrabber.cpp  X11KeyboardGrabber.h  XCB.cpp  XCB.h  Xcb.cpp  Xcb.h  (+5 more)
src/kimpanel/: CMakeLists.txt  Panel.h  main.cc
src/qtfrontend/: CMakeLists.txt  DIMPlatformInputContext.cpp  DIMPlatformInputContext.h  DIMPlatformInputContextPlugin.h  InputContextProxy.cc  InputContextProxy.cpp  InputContextProxy.h  WaylandConnection.cc  WaylandConnection.h  utils.h
src/qtimmodule/: CMakeLists.txt  DIMPlatformInputContext.cpp  DIMPlatformInputContext.h  DimTextInputV1.cpp  DimTextInputV1.h  InputContextProxy.cpp  InputContextProxy.h  QWaylandInputMethodEventBuilder.cpp  QWaylandInputMethodEventBuilder.h  QWaylandTextInputInterface.h
src/wl/: CMakeLists.txt  Connection.cc  Connection.h  Global.cc  Global.h  Seat.h  Server.cc  Type.cc  Type.h  ZwpInputMethodKeyboardGrabV2.cc  ZwpInputMethodKeyboardGrabV2.h  ZwpInputMethodManagerV2.h  ZwpInputMethodV2.cc  ZwpInputMethodV2.h  ZwpVirtualKeyboardManagerV1.cc  ZwpVirtualKeyboardManagerV1.h  ZwpVirtualKeyboardV1.cc  ZwpVirtualKeyboardV1.h  utils.h
src/wladdonsbase/: CMakeLists.txt  Global.h  InputMethodContextV1.cpp  InputMethodContextV1.h  InputMethodV1.cpp  InputMethodV1.h  InputMethodV2.h  Keyboard.cpp  Server.cpp  Server.h
src/wlserver/: CMakeLists.txt  WLServer.cc  WLServer.cpp  WLServer.h  main.cc  main.cpp
wl_server/: CMakeLists.txt  WaylandServer.cc  WaylandServer.h  main.cc  utils.h
(+196 files in other folders)
